-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0, 5.9.0 Beta 1, 5.9, 5.10, 5.11
-
Windows 7, MSVC 2010 64bit
-
7bc576771de0b3c96905a6d11a75a01917334dc9
Windows: QMenuBar autotest fails:
FAIL! : tst_QMenuBar::check_cursorKeys1() Compared values are not the same Actual (item1_B->selCount()): 0 Expected (1u): 1 .\tst_qmenubar.cpp(658) : failure location FAIL! : tst_QMenuBar::check_cursorKeys2() Compared values are not the same Actual (item2_D->selCount()): 0 Expected (1u): 1 .\tst_qmenubar.cpp(687) : failure location FAIL! : tst_QMenuBar::check_cursorKeys3() Compared values are not the same Actual (item1_B->selCount()): 0 Expected (1u): 1 .\tst_qmenubar.cpp(713) : failure location FAIL! : tst_QMenuBar::check_escKey() 'pm2->isActiveWindow()' returned FALSE. () .\tst_qmenubar.cpp(824) : failure location FAIL! : tst_QMenuBar::taskQTBUG4965_escapeEaten() 'menubar.hasFocus()' returned FALSE. () .\tst_qmenubar.cpp(1253) : failure location
Remember to enable the test in CI after the issue has been fixed.
- is required for
-
QTBUG-24203 Qt 5.0 - Windows: Fix tests
-
- Closed
-
- relates to
-
QTBUG-39362 Plain QWindow embedded by createWindowContainer does not regain focus after focussing widget
-
- Closed
-
For Gerrit Dashboard: QTBUG-24326 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
18939,1 | Fix sending simulated keyboard events to popup widgets | master | qt/qtbase | Status: MERGED | +2 | 0 |
19174,1 | Windows: Make QMenuBar autotest significant again | master | qt/qtbase | Status: MERGED | +2 | 0 |
190741,2 | Extend blacklisting of a tst_QMenuBar's test to cover Ubuntu 16.04 | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |
207258,2 | Blacklist check_cursorkeys2() on Ubuntu 16.04 | 5.9 | qt/qtbase | Status: ABANDONED | -2 | 0 |
207556,2 | tests: un-blacklist tst_QMenuBar::taskQTBUG4965_escapeEaten | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |